change friendship fluctuations to group bar chart, some style changes
- change h3->h2; h6->h3
- change todo text

--- a/content/relationships.html
+++ b/content/relationships.html
@@ -1,8 +1,11 @@
 <h1 id="relationships">Family and Relationships</h1>
 
-<h3>Family</h3>
+<h2>Family</h2>
 <p class="half">
-  <span class="big"> Some text about family here (todo) </span>
+  <span class="big">
+    A good chunk of us spend time with our family, either digitally
+    (88.7 %) or in person (71.67 %).
+  </span>
   Before the pandemic, most of us lived near campus and away from family.
   <br /><br />
   The average amount of time spent digitally in a month with parents
@@ -38,9 +41,9 @@
   would explain why 63 % of respondents spent on average less than a day with
   their parents in person.
 </p>
-<div class="hvb"></div>
+<div class="vb"></div>
 
-<h3>Friendships</h3>
+<h2>Friendships</h2>
 <p class="full">
   On average, a softie made 4.36 new friends over coop, and 3.05 over a school term.
   They would lose on average 1.30 friends over coop, compared to 0.55 over a school
@@ -48,29 +51,18 @@
   gain over a school term is 2.31 friends.
 </p>
 <div class="hvb"></div>
-<div class="half">
-  <span class="graph-title">
-    Friend gains over a coop term
-  </span>
-  <div id="friends-gain-coop"></div>
-</div>
-<div class="half second">
-  <span class="graph-title">
-    Friend losses over a coop term
-  </span>
-  <div id="friends-loss-coop"></div>
-</div>
-<div class="half">
-  <span class="graph-title">
-    Friend gains over a school term
-  </span>
-  <div id="friends-gain-school"></div>
-</div>
-<div class="half second">
-  <span class="graph-title">
-    Friend losses over a school term
-  </span>
-  <div id="friends-loss-school"></div>
+
+<div class="full">
+  <span class="graph-title">average friend fluctuations per term type</span>
+  <div id="friends-gain-term"></div>
+
+  <div class="scale">
+    <span class="legend">Fluctuation (term): </span>
+    <div class="friends-gain-item c1 pressed">Gain (coop)</div>
+    <div class="friends-gain-item c2 pressed">Lost (coop)</div>
+    <div class="friends-gain-item c3 pressed">Gained (study)</div>
+    <div class="friends-gain-item c4 pressed">Lost (study)</div>
+  </div>
 </div>
 
 <p class="full">
@@ -82,7 +74,7 @@
   rephrased from the original submissions.
 </p>
 <div class="hvb"></div>
-<h6>The most touching thing that a classmate has done for me was...</h6>
+<h3>The most touching thing that a classmate has done for me was...</h3>
 <p class="quote">
   Sticking by my side since day 1.
   <br /><br />
@@ -114,7 +106,7 @@
 
 <div class="vbx2"></div>
 
-<h3>Romance</h3>
+<h2>Romance</h2>
 <p class="full">
   <span class="big">
     About 33.9 % spent at least half of their degree in a romantic relationship.
