Update Post-Grad/Future Section + Akshay's Addendum (#21)
Update Future Section

--- a/content/future.html
+++ b/content/future.html
@@ -2,107 +2,190 @@
 <h3> Post-graduation plans </h3>
 <p class="half">
   <span class="big">
-    As of 5 months before graduation, 77% of students already have an offer, and 15% of students are
-    still looking for a job.
+    90% of respondents had already accepted a job offer two months prior
+    to graduating.
   </span>
-  7 students are planning to do graduate studies after
-  graduating. Although most of the class plans to join the workforce immediately,
-  34% of students are considering grad school in the future.
-  <br/><br/>
-
-  Even though 80% of the class has worked in California, less than half of
-  students have chosen to live in California after graduating. Although California
-  is perceived by many as the place to be for software engineers, seeing the gap
-  in the conversion rate suggests that there are many other great places for
-  software engineers such as East Coast Canada, East Coast US and Pacific North
-  West US.
+  However, only 52 of the 92 SE graduates, and a few who transferred,
+  answered this question. The only take-away is that most students had
+  the opportunity to accept a job offer prior to graduating.
+  <br></br>
+  Students pursuing further education will be doing so at Columbia University,
+  Stanford University, as well as back at the University of Waterloo.
 </p>
 <div class="half second">
   <span class="graph-title">Post graduation plans</span>
   <div id="post-grad"></div>
   <div class="vb"></div>
-  <span class="graph-title">Desired location</span>
+  <span class="graph-title">Relocation plans</span>
   <div id="post-location"></div>
 </div>
+
+<div class="vbx3"></div>
+
+<p class="half">
+  <span class="big">
+    Big tech and trading firms hire many of the SE grads.
+  </span>
+  Unfortunately, only 51 students answered this question,
+  so just over 55% of the total graduating class. It is likely
+  that the full breadth of companies and industries is larger
+  when considering everyone's future. 
+</p>
+<div class="half second">
+  <span class="graph-title">Full-Time Company</span>
+  <div id="ft-company"></div>
+</div>
+
+<div class="vbx3"></div>
+
+<p class="half">
+  <span class="big">
+    The co-op experience acts as a great pipeline for hiring
+    young talent for companies.
+  </span>
+  It also enables students to find a workplace they enjoy, as shown by the
+  sheer amount of students opting to return to a co-op employer rather
+  than accepting an offer elsewhere.
+</p>
+<div class="half second">
+  <span class="graph-title">Co-op conversion</span>
+  <div id="coop-conversion"></div>
+</div>
+
+<div class="vbx3"></div>
+
+<p class="half">
+  <span class="big">
+    Students do not feel the need to become accredited as Professional Engineers.
+  </span>
+  Most students have no intention to pursue a license with the PEO. This is
+  required to have your job title include the term "Engineer" within Canada.
+  Very few industries restrict hiring to accredited engineers and instead employ
+  "software developers".
+</p>
+<div class="half second">
+  <span class="graph-title">Will Pursue P.Eng Accreditation</span>
+  <div id="peng"></div>
+</div>
+
+<div class="vbx3"></div>
+
+<p class="half">
+  <span class="big">
+    Students believe in the value of their FYDP projects. 
+  </span>
+  More than half of respondents may or will continue work on their FYDP.
+  Hopefully this shows that students have selected projects in areas they
+  are interested in or that they believe will be beneficial to pursue
+  further.
+</p>
+<div class="half second">
+  <span class="graph-title">Will Continue FYDP Work</span>
+  <div id="cont-fydp"></div>
+</div>
+
+<div class="vbx3"></div>
+
+<p class="half">
+  <span class="big">
+    Students are very content with their post-grad plans with 52% feeling
+    that they are perfect and 91% rating their future a 4/5 or higher.
+  </span>
+  Given the state of the world at this moment, it is reassuring to see
+  SE students being satisfied with their situations.
+</p>
+<div class="half second">
+  <span class="graph-title">Post-grad contentedness</span>
+  <div id="post-contentness"></div>
+</div>
+
+<div class="vbx2"></div>
+<h3> Full-Time Compensation </h3>
+<p class="half">
+  <span class="big">
+    The compensation for the first-year of full-time work for respondents
+    will average $284,728 CAD, with a median of $260,000. This number
+    includes all forms of remuneration eg. signing bonuses and equity.
+  </span>
+  The exchange rate used for this question and the ones that follow was 1.3
+  CAD per 1 USD. That rate was accurate at the time the survey was shared,
+  but the rate is 1.2 as of writing.
+  <br /><br />
+  Since 77% of respondents will be relocating to the US, we can estimate
+  the new average and median earnings to actually be $267,882 and $244,600 CAD.
+  <!-- 260k*(1 + 0.77(1.2/1.3 - 1)). -->
+</p>
+<div class="half second">
+  <span class="graph-title">New Grad Total First-Year Compensation</span>
+  <div id="ft-total"></div>
+</div>
+
+<div class="vbx2"></div>
+<p class="half">
+  <span class="big">
+    The hourly wage / salary will have a median and an average of $81 and
+    $105 CAD respectively.
+  </span>
+  We can again estimate this to be $76 and $99 CAD with today's exchange rate.
+</p>
+<div class="half second">
+  <span class="graph-title">New Grad Hourly Wage</span>
+  <div id="ft-hourly"></div>
+</div>
+
+<div class="vbx2"></div>
+<p class="half">
+  <span class="big">
+    There's a huge discrepency in profit sharing for new grads,
+    with the median and average being $32,500 and $95,392 CAD.
+  </span>
+  "Profit sharing" here is used to encompass stock options, RSUs,
+  and other forms of equity-based compensation.
+  <br /><br />
+  There are extreme outliers that skewed the mean and median greatly.
+  <br /><br />
+  With the new rate, the results are $30,505 and $89,742 CAD.
+</p>
+<div class="half second">
+  <span class="graph-title">New Grad Profit Sharing in Compensation</span>
+  <div id="ft-stock"></div>
+</div>
+
+<div class="vbx2"></div>
+<p class="half">
+  <span class="big">
+    Sign-on bonuses were common for respondents, with the median and
+    average being $40,000 and $62,979 CAD.
+  </span>
+  The mode response was $0 for a signing bonus with 15 responses out of
+  the total 47.
+  <br /><br />
+  Adjusting for the new exchange rate, we find the median and average to be $37,630 and $59,248 CAD.
+</p>
+<div class="half second">
+  <span class="graph-title">New Grad Sign-On Compensation</span>
+  <div id="ft-signing"></div>
+</div>
+
 
 <div class="vbx2"></div>
 
 <h3> Motivations </h3>
 <p class="half">
   <span class="big">
-    Good compensation and growth as an engineer were the main
-    factors affecting post-graduation plans.
+    An enjoyable workplace and good compensation were the biggest factors in
+    accepting full-time roles. 
   </span>
-  This could explain why California was a popular choice for full-time location.
+  It is great to see the class value a positive environment above compensation.
   <br /><br />
-  Although family may be the least popular factor, most students working away
-  from home have expressed interest in working near their families in the
-  future.
+  In contrast to most other industries, software recruitment has remained
+  relatively unaffected in the face of a global pandemic. Only 1 respondant factored
+  job security in their decision-making. 
 </p>
 <div class="half second">
   <span class="graph-title">Factors affecting post-graduation plans</span>
   <div id="motivation"></div>
 </div>
-
-<div class="vbx2"></div>
-
-<h3> Debt </h3>
-<p class="half">
-  <span class="big">
-    65% of students are graduating debt-free.
-  </span>
-  30% of students have less than $30,000 in debt. Among students who are
-  in debt, the median debt is $22,500.
-  <br /><br />
-  It's important to note that there were students from each family income bracket
-  who graduated debt-free.
-  All students with family income higher than $200,000 graduated debt-free.
-</p>
-<div class="half second">
-  <span class="graph-title">Debt per family income bracket</span>
-  <div id="debt"></div>
-</div>
-
-<div class="vbx2"></div>
-
-<h3> Advice </h3>
-<p class="full">
-  <span class="big">
-    "Figure out which advice applies best to you and ignore the rest."
-  </span>
-  The following is a summary of the advice shared by students with the
-  intention of being shared with both prospective and current SE students.
-  Many of the sentences
-  are directly quoted or rephrased from the original advice.
-  <br />
-  <p class="quote">
-  Your success should not be defined by others. Just because someone else is better than you at
-  something, it does not mean that you're failing. Instead, be open and realize
-  you can learn something from everyone. Realize that your peers' successes
-  should be motivation rather than a reason to put yourself down.
-  <br /><br />
-  Find value in modesty, empathy, and courage. Learn to develop good habits
-  early on, and budget your time based on your options and priorities. These
-  skills are indispensable during university. Find a hobby you love. That
-  hobby just might be software engineering, or it could be something completely
-  different like drawing video game characters.
-  <br /><br />
-  Stop worrying about marks. They don't get you far unless you're looking at
-  post graduate studies. This also means that you should know when to stop working
-  on assignments to work on other things. "After graduation, I won't remember
-  many of the bogus technical concepts. I will, however, remember the late
-  nights in the SE lab with friends, fooling around while doing a last minute
-  assignment."
-  <br /><br />
-  Try out as many different co-ops as possible. And don't Cali or continuous.
-  It's tough to get your first job, but don't give up. And if you get a co-op at
-  a big company, it does not mean that you're at the top of the world.
-  <br /><br />
-  And most importantly, university goes by in a flash, so enjoy it!
-  <br /><br /><br />
-  - University of Waterloo Software Engineering Class of 2018
-  </p>
-</p>
 
 <div class="vbx2"></div>
 
@@ -121,3 +204,119 @@
   <span class="graph-title">Plans to return to home country</span>
   <div id="post-return-home"></div>
 </div>
+
+<div class="vbx2"></div>
+
+<h3> Closing Remarks </h3>
+<p class="full">
+  The following is a summary of the advice shared by students with the
+  intention of being shared with both prospective and current SE students.
+  Many of the sentences
+  are directly quoted or rephrased from the original advice.
+  <br />
+
+  <div class="vb"></div>
+  <span class="big">
+    "What is the best life hack/tip you've learned that you'd
+    like to share?"
+  </span>
+  <p class="quote">
+    The best drink you can have is Burgundy's at Wilfs. I will
+    be coming back for [them].
+    <br></br>
+    If you want to be super organized when packing and moving
+    around, store photos of various layers of your packed bags.
+    Then, when you need to go on a similar trip (whether it's
+    2 weeks in a tropical location or moving to a new city for
+    co-op), you know exactly what to pack and where, and it
+    basically requires no time at all to get ready!
+    <br></br>
+    Take the same courses as the people you live with.
+    <br></br>
+    If you don't collect air miles you're missing out on
+    $10-$50 per flight.
+    <br></br>
+    Talk less, listen more.
+    <br></br>
+    Surround yourself with successful people who will naturally
+    push you to do your best.
+    <br></br>
+    Be empathetic.
+  </p>
+</p>
+
+  <div class="vb"></div>
+  <span class="big">
+    "What is one piece of advice you would give to your
+    first-year self?"
+  </span>
+  <p class="quote">
+    Have confidence. You deserve to be here.
+    <br></br>
+    Overworking yourself never works! You reach a point
+    w[h]ere putting more work doesn't yield the cost benefit
+    necessary, instead you will feel much better and
+    perform as well or better by being involved in something
+    you enjoy.
+    <br></br>
+    Don't take everything so seriously. Take the time to
+    learn even if it means lower marks, and take some time
+    to explore projects, hobbies and have fun!
+    <br></br>
+    I don't think my first-year self would have taken my
+    advice.
+    <br></br>
+    Spend more time having fun. Always keep well being and
+    quality of life in mind.
+    <br></br>
+    Don't limit your co-op applications to one place - especially
+    in first year. It's better to apply to a variety of jobs
+    in a variety of locations -- use that as an excuse to
+    lightly travel when on coop.
+    <br></br>
+    Stop sending cringey snaps when drunk.
+    <br></br>
+    Buy doge coin.
+    <br></br>
+    People are less intimidating than you think.
+    <br></br>
+    Take more risks throughout university.
+    <br></br>
+    Be yourself.
+  </p>
+
+  <div class="vb"></div>
+  <span class="big">
+    "What was the best lesson you learned in your undergrad?"
+  </span>
+  <p class="quote">
+    Compassion.
+    <br></br>
+    How important reflection time is. Taking time to reflect
+    on how I'm feeling about all parts of my life has led to
+    some of the biggest, most positive changes I made during
+    undergrad.
+    <br></br>
+    Failing a class.
+    <br></br>
+    Not all things are worth doing.
+    <br></br>
+    How to learn complex ideas quickly.
+    <br></br>
+    Figure out what you want and don't be afraid to go
+    against the norm. Don't strive for something just
+    because other people do.
+    <br></br>
+    Stress baking helps a lot, surprisingly.
+    <br></br>
+    The importance of being confident in yourself and what you can do.
+    <br></br>
+    Cramming last minute works fantastically, unless it doesn't.
+    <br></br>
+    Mental health is as important as physical health. In tandem,
+    your productivity doesn't define your self worth. It's fine
+    to have a day where you don't get anything significant done.
+    <br></br>
+    Humility.
+  </p>
+</p>
