--- a/content/introduction.html
+++ b/content/introduction.html
@@ -135,7 +135,7 @@ future classes, as we did, in order to take future profiles to new heights.
     <li>10 <a href="#future">Future</a></li>
     <li>
       <p class="nested">
-        Debt, post-graduation plans
+        Post-graduation plans, Compensation
       </p>
     </li>
     <li>11 <a href="#relationships">Family and relationships</a></li>
