--- a/content/lifestyle.html
+++ b/content/lifestyle.html
@@ -150,6 +150,42 @@
   <div id="travel-locations"></div>
 </div>
 
+<p class="full">
+  <span class="big">
+    "When travel restrictions will be lifted, which country/city
+    do you want to visit the most and why?"
+  </span>
+  <p class="quote">
+    La Paz, Mexico for fishing.
+    <br></br>
+    South Korea for the amazing food.
+    <br></br>
+    Scotland for golf.
+    <br></br>
+    Australia!
+    <br></br>
+    Japan! It's always been on my bucket list. I want to go
+    for the food and the culture.
+    <br></br>
+    Iceland, heard it is very beautiful.
+    <br></br>
+    New Zealand, I have just always wanted to go there. It's
+    beautiful and has extremely interesting geography.
+    <br></br>
+    China as it's home.
+    <br></br>
+    Modena, Italy for the sick food.
+    <br></br>
+    Patagonia to hike the W Trek.
+    <br></br>
+    Himalayas, India for the views and culture.
+    <br></br>
+    Norway for the scenery.
+    <br></br>
+    Greece!
+  </p>
+</p>
+
 <div class="vbx4"></div>
 
 <h3> Extracurriculars </h3>
