--- a/content/relationships.html
+++ b/content/relationships.html
@@ -187,3 +187,43 @@
   </span>
   <div id="romance-cheating-reasons"></div>
 </div>
+
+<h3> Growth </h3>
+<p class="full">
+  <span class="big">
+    "How has your understanding of relationships changed
+    in the past 5 years?"
+  </span>
+  <p class="quote">
+    The people who we cared most about in our lives who we
+    have parted ways with are not gone. They exist as memories,
+    as voices of our consciences, and as layers of the characters
+    we are today.
+    <br></br>
+    Understanding compromise.
+    <br></br>
+    Yes.
+    <br></br>
+    They take time to nurture and maintain. That's not
+    meant to sound overly pessimistic, but if you have a
+    busy schedule, you need to think consciously about the
+    relationships you want to keep and those you don't to
+    have a happy social life.
+    <br></br>
+    The USD, which bases on the American economy, is more
+    stable than most relationships.
+    <br></br>
+    People are like plants: some need more water, others
+    less, and watering them is your responsibility. Maybe
+    this plant needs more than you can give, maybe that
+    one you like less; ultimately you decide who you want
+    to keep in your life and water that relationship.
+    <br></br>
+    I've learned more to love in my own way, instead of
+    mimicking the relationship of my parents. 
+    <br></br>
+    Oh so completely different with my parents and family.
+    Treated completely like an adult and I swear I've been
+    helping parent my little brother.
+  </p>
+</p>
