Add multi series box plot (#41)

--- a/content/academics.html
+++ b/content/academics.html
@@ -316,6 +316,12 @@
 <div class="half second">
   <span class="graph-title">Enriched Programs compared to grades</span>
   <div id="enriched-grades"></div>
+
+  <div class="scale">
+    <span class="legend">Cumulative Average:</span>
+    <div class="enriched-grades-item c1 pressed">Overall</div>
+    <div class="enriched-grades-item c2">First Year</div>
+  </div>
 </div>
 
 <h3> Sleep </h3>
